crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_unique_with_index@remove_unique_with_index_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" text )
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
CREATE INDEX "ix_users__idx_id" ON "users" ("id")
