crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_unique_with_other_unique_constraint@remove_unique_with_other_unique_constraint_Postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "users" DROP CONSTRAINT "uq_users__uq_email"
