crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_unique_with_unique_index@remove_unique_with_unique_index_Postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "users" DROP CONSTRAINT "uq_email"
