crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_unique_without_name@remove_unique_without_name_MySql.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE `users` DROP INDEX `uq_users__email`
