crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_unique_without_name@remove_unique_without_name_remove_unique_without_name_postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "users" DROP CONSTRAINT "users_email_key"
